# FaceLink-Organizer

./: README.md  main.py  pyproject.toml
core/: face.py  video.py
